# PROJET_IAR

./: .gitignore  README.md  all.py  evol.py  fixed_structure_nn_numpy.py  plot.py  projet.py  render.py  simulation.c  simulation.cpp  simulation.pyx  test_angle.py
module/: .gitignore  CMakeLists.txt  best_pred.npy  co_evol.py  evol.py  evol_pred.py  evol_prey.py  get_torch.sh  log.txt  plot.py  render.py  test.py  test_angle.py
module/best_preds/: best_pred.npy
module/best_preys/: best_prey.npy
module/includes/: Individual.hpp  Net.hpp  Simulation.hpp  utils.hpp
module/result_confusion/: best_pred_confusion.npy  best_prey_confusion.npy  result_confusionbest_pred_confusion.npy  result_confusionbest_prey_confusion.npy  result_confusionsurvivorships-confusion.npy  result_confusionswarm-densitys-confusion.npy  result_confusionswarm-dispersions-confusion.npy  survivorships-confusion.npy  swarm-densitys-confusion.npy  swarm-dispersions-confusion.npy
module/result_no_confusion/: best_pred_no_confusion.npy  best_prey_no_confusion.npy  result_no_confusionbest_pred_no_confusion.npy  result_no_confusionbest_prey_no_confusion.npy  result_no_confusionswarm-densitys-no-confusion.npy  result_no_confusionswarm-dispersions-no-confusion.npy  survivorships-no-confusion.npy  swarm-densitys-no-confusion.npy  swarm-dispersions-no-confusion.npy
module/sources/: Individual.cpp  Net.cpp  Simulation.cpp  pylib.cpp
results/confusion_0/: best_pred.npy  best_pred_0.npy  best_pred_100.npy  best_pred_120.npy  best_pred_140.npy  best_pred_160.npy  best_pred_180.npy  best_pred_20.npy  best_pred_40.npy  best_pred_60.npy  best_pred_80.npy  best_prey.npy  best_prey_0.npy  best_prey_100.npy  best_prey_120.npy  best_prey_140.npy  best_prey_160.npy  best_prey_180.npy  best_prey_20.npy  best_prey_40.npy  best_prey_60.npy  best_prey_80.npy  survivorships-errors.npy  survivorships.npy  swarm-densitys-errors.npy  swarm-densitys.npy  swarm-dispersions-errors.npy  swarm-dispersions.npy
results/confusion_1/: best_pred.npy  best_pred_0.npy  best_pred_100.npy  best_pred_120.npy  best_pred_140.npy  best_pred_160.npy  best_pred_180.npy  best_pred_20.npy  best_pred_40.npy  best_pred_60.npy  best_pred_80.npy  best_prey.npy  best_prey_0.npy  best_prey_100.npy  best_prey_120.npy  best_prey_140.npy  best_prey_160.npy  best_prey_180.npy  best_prey_20.npy  best_prey_40.npy  best_prey_60.npy  best_prey_80.npy  survivorships-errors.npy  survivorships.npy  swarm-densitys-errors.npy  swarm-densitys.npy  swarm-dispersions-errors.npy  swarm-dispersions.npy
results/confusion_2/: best_pred.npy  best_pred_0.npy  best_pred_100.npy  best_pred_120.npy  best_pred_140.npy  best_pred_160.npy  best_pred_180.npy  best_pred_20.npy  best_pred_40.npy  best_pred_60.npy  best_pred_80.npy  best_prey.npy  best_prey_0.npy  best_prey_100.npy  best_prey_120.npy  best_prey_140.npy  best_prey_160.npy  best_prey_180.npy  best_prey_20.npy  best_prey_40.npy  best_prey_60.npy  best_prey_80.npy  survivorships-errors.npy  survivorships.npy  swarm-densitys-errors.npy  swarm-densitys.npy  swarm-dispersions-errors.npy  swarm-dispersions.npy
results/confusion_3/: best_pred.npy  best_pred_0.npy  best_pred_100.npy  best_pred_120.npy  best_pred_140.npy  best_pred_160.npy  best_pred_180.npy  best_pred_20.npy  best_pred_40.npy  best_pred_60.npy  best_pred_80.npy  best_prey.npy  best_prey_0.npy  best_prey_100.npy  best_prey_120.npy  best_prey_140.npy  best_prey_160.npy  best_prey_180.npy  best_prey_20.npy  best_prey_40.npy  best_prey_60.npy  best_prey_80.npy  survivorships-errors.npy  (+5 more)
(+958 files in other folders)
